force-app/main/default/objects/Permission_Type__c/Permission_Type__c.object-meta.xml
<CustomObject>
    <label>Permission Type</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Permission Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permissions Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>