force-app/main/default/objects/Permission_Type__c/fields/MaxRecords__c.field-meta.xml
<CustomField>
    <fullName>MaxRecords__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MaxRecords</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>