force-app/main/default/objects/Permission_Type__c/fields/Profiile__c.field-meta.xml
<CustomField>
    <fullName>Profiile__c</fullName>
    <label>Profiile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>