force-app/main/default/objects/Permission_Type__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diario</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Siempre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>